tests/invalid/trait/method_call_short_generic_trait_arg_syntax.facet
trait Into<T> {
  fn into(self: Self) -> T;
}

impl Into<unrestricted isize> for unrestricted isize {
  fn into(self: Self) -> unrestricted isize {
    self
  }
}

fn main(x: unrestricted isize) -> unrestricted isize {
  (Into<unrestricted isize>::into x)
}
